	- Several MGL commands can be placed in single string. They have to be separated by column ':'.
	- MGL command 'define' now can define scalar variables, like "define xmin dat.min-1". These variables can be used as later as a number, like "xrange xmin 1".
	- Add MGL command 'ranges' for setting plot ranges (like 'axis' command).
	- Add MGL commands 'break', 'continue' for improving for-cycles.
	- Add automatic increase of the point numbers in plots by formula with singularities (i.e. like Plot("sin(1/x)");
	- Add mglGraph::GetFit() function which return fitted formula.
	- Add function mglGraph::Label() for drawing text at arbitrary place of the screen.
	- Optimize ticks length -- now it don't depend on axis range, but only on SubPlot()/InPlot() functions.
	- Output array in Fit[S]() functions now always distributed in Min*Max range and don't depend on input arrays.
	- Now coordinates of mglQO2d() and mglAF2d() is defined by the same way as in Fill().
	- Improve mglData::Squeeze() function for keeping last point and add smoothing on demand.
	- Introduce function names for textual formulas compatible with Maxima one (i.e. elliptic_ec(), jacobi_sn() and so on).
	- Add extra smoothing in line drawing.
	- Add smoothed drawing in mglGraphPS -- same as in mglGraphZB (but a bit faster).
	- Bug with PlotFactor changing while AutoPlotFactor=false.
	- Bug with Vect() and MeshNum>1.
	- Bug with overriding default palette by manual color specification.
	- Bug in SWIG interface with selecting between float/double.
	- Memory leaks correction.
	- Incompatible changes:
		* rename Axis() function to SetFunc() and SetCoor() functions (Python-like)
		* rename CloudQ() to Cloud(), and mgl_cloudq*() to mgl_cloud*()
		* rename Flow(mglPoint p0,...) to FlowP(mglPoint p0,...)
		

1.9.0.1 Released 8 July 2009
	- Correct minor bug in win32 version (in mglData::Read()).

1.9 Released 1 July 2009